[package]
name = "alt"
version = "0.1.0"
authors = ["Itay Garin <thifixp@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.1"
log = "0.4.8"
simplelog = "0.8.0"
dirs = "2.0.2"
serde = "1.0.110"
ron = "0.6.0"
anyhow = "1.0.31"
tokio-i3ipc = "0.8.0"
tokio = { version = "0.2.21", features = ["rt-threaded", "sync", "io-util", "macros", "tcp"] }
tmq = "0.2.1"
futures = "0.3.5"